# strclear

./: CMakeLists.txt  LICENSE.txt  MappedFile.cpp  MappedFile.hpp  README.md  TODO  dirsync.cpp  strclear.cpp
tests/: 01_basic_string_replace.cmake  02_path_expansion.cmake  03_symlink_path_expansion.cmake  CMakeLists.txt  CMakeLists.txt.old  bin.sh  charcnt.cpp  make_large_file.cmake  run_mixed_list.cmake  run_test.cmake  stage_filter_list.cmake  stage_mixed_list.cmake  stage_parallel_list.cmake  test_dirsync.cmake  verify_contains.cmake
tests/testdata/: multi.txt  no_match.txt  plain.txt
